--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.TextAPic">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".EditContactsActivity"
+            android:theme="@style/Theme.TextAPic" />
     </application>
 
 </manifest>
