--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,8 @@ dependencies {
     implementation "androidx.compose.material:material:1.3.1"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.datastore:datastore-preferences-core:1.0.0"
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'id.zelory:compressor:3.0.1'
+    implementation "com.jakewharton.timber:timber:5.0.1"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
